jinja-computation-graph/Parser/Bcparser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.6 from Bcparser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_bcparse -> Prog                             (0)
	Prog -> ClassDecl Prog                             (1)
	Prog ->                                            (2)
	ClassDecl -> class colon name colon id ClassBody   (3)
	ClassBody -> classbody colon superType colon id fields colon FDecls methods colon MDecls   (4)
	FDecls -> FDecl FDecls                             (5)
	FDecls ->                                          (6)
	FDecl -> id id                                     (7)
	MDecls -> MDecl MDecls                             (8)
	MDecls ->                                          (9)
	MDecl -> method colon id id parameter colon ParMeths methodbody colon MBody   (10)
	ParMeths -> ParMeth ParMeths                       (11)
	ParMeths ->                                        (12)
	ParMeth -> id id                                   (13)
	MBody -> maxstack colon int maxvars colon int bytecode colon ByteCode   (14)
	ByteCode -> Instr ByteCode                         (15)
	ByteCode ->                                        (16)
	Instr -> load int                                  (17)
	Instr -> store int                                 (18)
	Instr -> push absval                               (19)
	Instr -> new id                                    (20)
	Instr -> getfield id id                            (21)
	Instr -> putfield id id                            (22)
	Instr -> checkcast id                              (23)
	Instr -> invoke id int                             (24)
	Instr -> return                                    (25)
	Instr -> pop                                       (26)
	Instr -> iadd                                      (27)
	Instr -> isub                                      (28)
	Instr -> goto int                                  (29)
	Instr -> cmpeq                                     (30)
	Instr -> cmpgeq                                    (31)
	Instr -> not                                       (32)
	Instr -> and                                       (33)
	Instr -> or                                        (34)
	Instr -> iffalse int                               (35)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	class          { TokClass }
	name           { TokName }
	classbody      { TokClassBody }
	superType      { TokSuper }
	method         { TokMethod }
	methods        { TokMethods }
	fields         { TokFields }
	parameter      { TokParameters }
	maxstack       { TokMaxStack }
	maxvars        { TokMaxVars }
	bytecode       { TokByteCode }
	methodbody     { TokMethodBody }
	load           { TokLoad }
	store          { TokStore }
	push           { TokPush }
	new            { TokNew }
	getfield       { TokGetField }
	putfield       { TokPutField }
	checkcast      { TokCheckcast }
	invoke         { TokInvoke }
	return         { TokReturn }
	pop            { TokPop }
	iadd           { TokIadd }
	isub           { TokIsub }
	goto           { TokGoto }
	cmpeq          { TokCmpeq }
	cmpgeq         { TokCmpGeq }
	not            { TokNot }
	and            { TokAnd }
	or             { TokOr }
	iffalse        { TokIffalse }
	id             { TokVar $$ }
	int            { TokInt $$ }
	absval         { TokAbsVal $$ }
	colon          { TokColon }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_bcparse  rule  0
	Prog            rules 1, 2
	ClassDecl       rule  3
	ClassBody       rule  4
	FDecls          rules 5, 6
	FDecl           rule  7
	MDecls          rules 8, 9
	MDecl           rule  10
	ParMeths        rules 11, 12
	ParMeth         rule  13
	MBody           rule  14
	ByteCode        rules 15, 16
	Instr           rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	class          shift, and enter state 3
	%eof           reduce using rule 2

	Prog           goto state 4
	ClassDecl      goto state 2

State 1


	class          shift, and enter state 3

	ClassDecl      goto state 2

State 2

	Prog -> ClassDecl . Prog                            (rule 1)

	class          shift, and enter state 3
	%eof           reduce using rule 2

	Prog           goto state 6
	ClassDecl      goto state 2

State 3

	ClassDecl -> class . colon name colon id ClassBody    (rule 3)

	colon          shift, and enter state 5


State 4

	%start_bcparse -> Prog .                            (rule 0)

	%eof           accept


State 5

	ClassDecl -> class colon . name colon id ClassBody    (rule 3)

	name           shift, and enter state 7


State 6

	Prog -> ClassDecl Prog .                            (rule 1)

	%eof           reduce using rule 1


State 7

	ClassDecl -> class colon name . colon id ClassBody    (rule 3)

	colon          shift, and enter state 8


State 8

	ClassDecl -> class colon name colon . id ClassBody    (rule 3)

	id             shift, and enter state 9


State 9

	ClassDecl -> class colon name colon id . ClassBody    (rule 3)

	classbody      shift, and enter state 11

	ClassBody      goto state 10

State 10

	ClassDecl -> class colon name colon id ClassBody .    (rule 3)

	class          reduce using rule 3
	%eof           reduce using rule 3


State 11

	ClassBody -> classbody . colon superType colon id fields colon FDecls methods colon MDecls    (rule 4)

	colon          shift, and enter state 12


State 12

	ClassBody -> classbody colon . superType colon id fields colon FDecls methods colon MDecls    (rule 4)

	superType      shift, and enter state 13


State 13

	ClassBody -> classbody colon superType . colon id fields colon FDecls methods colon MDecls    (rule 4)

	colon          shift, and enter state 14


State 14

	ClassBody -> classbody colon superType colon . id fields colon FDecls methods colon MDecls    (rule 4)

	id             shift, and enter state 15


State 15

	ClassBody -> classbody colon superType colon id . fields colon FDecls methods colon MDecls    (rule 4)

	fields         shift, and enter state 16


State 16

	ClassBody -> classbody colon superType colon id fields . colon FDecls methods colon MDecls    (rule 4)

	colon          shift, and enter state 17


State 17

	ClassBody -> classbody colon superType colon id fields colon . FDecls methods colon MDecls    (rule 4)

	methods        reduce using rule 6
	id             shift, and enter state 20

	FDecls         goto state 18
	FDecl          goto state 19

State 18

	ClassBody -> classbody colon superType colon id fields colon FDecls . methods colon MDecls    (rule 4)

	methods        shift, and enter state 23


State 19

	FDecls -> FDecl . FDecls                            (rule 5)

	methods        reduce using rule 6
	id             shift, and enter state 20

	FDecls         goto state 22
	FDecl          goto state 19

State 20

	FDecl -> id . id                                    (rule 7)

	id             shift, and enter state 21


State 21

	FDecl -> id id .                                    (rule 7)

	methods        reduce using rule 7
	id             reduce using rule 7


State 22

	FDecls -> FDecl FDecls .                            (rule 5)

	methods        reduce using rule 5


State 23

	ClassBody -> classbody colon superType colon id fields colon FDecls methods . colon MDecls    (rule 4)

	colon          shift, and enter state 24


State 24

	ClassBody -> classbody colon superType colon id fields colon FDecls methods colon . MDecls    (rule 4)

	class          reduce using rule 9
	method         shift, and enter state 27
	%eof           reduce using rule 9

	MDecls         goto state 25
	MDecl          goto state 26

State 25

	ClassBody -> classbody colon superType colon id fields colon FDecls methods colon MDecls .    (rule 4)

	class          reduce using rule 4
	%eof           reduce using rule 4


State 26

	MDecls -> MDecl . MDecls                            (rule 8)

	class          reduce using rule 9
	method         shift, and enter state 27
	%eof           reduce using rule 9

	MDecls         goto state 29
	MDecl          goto state 26

State 27

	MDecl -> method . colon id id parameter colon ParMeths methodbody colon MBody    (rule 10)

	colon          shift, and enter state 28


State 28

	MDecl -> method colon . id id parameter colon ParMeths methodbody colon MBody    (rule 10)

	id             shift, and enter state 30


State 29

	MDecls -> MDecl MDecls .                            (rule 8)

	class          reduce using rule 8
	%eof           reduce using rule 8


State 30

	MDecl -> method colon id . id parameter colon ParMeths methodbody colon MBody    (rule 10)

	id             shift, and enter state 31


State 31

	MDecl -> method colon id id . parameter colon ParMeths methodbody colon MBody    (rule 10)

	parameter      shift, and enter state 32


State 32

	MDecl -> method colon id id parameter . colon ParMeths methodbody colon MBody    (rule 10)

	colon          shift, and enter state 33


State 33

	MDecl -> method colon id id parameter colon . ParMeths methodbody colon MBody    (rule 10)

	methodbody     reduce using rule 12
	id             shift, and enter state 36

	ParMeths       goto state 34
	ParMeth        goto state 35

State 34

	MDecl -> method colon id id parameter colon ParMeths . methodbody colon MBody    (rule 10)

	methodbody     shift, and enter state 39


State 35

	ParMeths -> ParMeth . ParMeths                      (rule 11)

	methodbody     reduce using rule 12
	id             shift, and enter state 36

	ParMeths       goto state 38
	ParMeth        goto state 35

State 36

	ParMeth -> id . id                                  (rule 13)

	id             shift, and enter state 37


State 37

	ParMeth -> id id .                                  (rule 13)

	methodbody     reduce using rule 13
	id             reduce using rule 13


State 38

	ParMeths -> ParMeth ParMeths .                      (rule 11)

	methodbody     reduce using rule 11


State 39

	MDecl -> method colon id id parameter colon ParMeths methodbody . colon MBody    (rule 10)

	colon          shift, and enter state 40


State 40

	MDecl -> method colon id id parameter colon ParMeths methodbody colon . MBody    (rule 10)

	maxstack       shift, and enter state 42

	MBody          goto state 41

State 41

	MDecl -> method colon id id parameter colon ParMeths methodbody colon MBody .    (rule 10)

	class          reduce using rule 10
	method         reduce using rule 10
	%eof           reduce using rule 10


State 42

	MBody -> maxstack . colon int maxvars colon int bytecode colon ByteCode    (rule 14)

	colon          shift, and enter state 43


State 43

	MBody -> maxstack colon . int maxvars colon int bytecode colon ByteCode    (rule 14)

	int            shift, and enter state 44


State 44

	MBody -> maxstack colon int . maxvars colon int bytecode colon ByteCode    (rule 14)

	maxvars        shift, and enter state 45


State 45

	MBody -> maxstack colon int maxvars . colon int bytecode colon ByteCode    (rule 14)

	colon          shift, and enter state 46


State 46

	MBody -> maxstack colon int maxvars colon . int bytecode colon ByteCode    (rule 14)

	int            shift, and enter state 47


State 47

	MBody -> maxstack colon int maxvars colon int . bytecode colon ByteCode    (rule 14)

	bytecode       shift, and enter state 48


State 48

	MBody -> maxstack colon int maxvars colon int bytecode . colon ByteCode    (rule 14)

	colon          shift, and enter state 49


State 49

	MBody -> maxstack colon int maxvars colon int bytecode colon . ByteCode    (rule 14)

	class          reduce using rule 16
	method         reduce using rule 16
	load           shift, and enter state 52
	store          shift, and enter state 53
	push           shift, and enter state 54
	new            shift, and enter state 55
	getfield       shift, and enter state 56
	putfield       shift, and enter state 57
	checkcast      shift, and enter state 58
	invoke         shift, and enter state 59
	return         shift, and enter state 60
	pop            shift, and enter state 61
	iadd           shift, and enter state 62
	isub           shift, and enter state 63
	goto           shift, and enter state 64
	cmpeq          shift, and enter state 65
	cmpgeq         shift, and enter state 66
	not            shift, and enter state 67
	and            shift, and enter state 68
	or             shift, and enter state 69
	iffalse        shift, and enter state 70
	%eof           reduce using rule 16

	ByteCode       goto state 50
	Instr          goto state 51

State 50

	MBody -> maxstack colon int maxvars colon int bytecode colon ByteCode .    (rule 14)

	class          reduce using rule 14
	method         reduce using rule 14
	%eof           reduce using rule 14


State 51

	ByteCode -> Instr . ByteCode                        (rule 15)

	class          reduce using rule 16
	method         reduce using rule 16
	load           shift, and enter state 52
	store          shift, and enter state 53
	push           shift, and enter state 54
	new            shift, and enter state 55
	getfield       shift, and enter state 56
	putfield       shift, and enter state 57
	checkcast      shift, and enter state 58
	invoke         shift, and enter state 59
	return         shift, and enter state 60
	pop            shift, and enter state 61
	iadd           shift, and enter state 62
	isub           shift, and enter state 63
	goto           shift, and enter state 64
	cmpeq          shift, and enter state 65
	cmpgeq         shift, and enter state 66
	not            shift, and enter state 67
	and            shift, and enter state 68
	or             shift, and enter state 69
	iffalse        shift, and enter state 70
	%eof           reduce using rule 16

	ByteCode       goto state 81
	Instr          goto state 51

State 52

	Instr -> load . int                                 (rule 17)

	int            shift, and enter state 80


State 53

	Instr -> store . int                                (rule 18)

	int            shift, and enter state 79


State 54

	Instr -> push . absval                              (rule 19)

	absval         shift, and enter state 78


State 55

	Instr -> new . id                                   (rule 20)

	id             shift, and enter state 77


State 56

	Instr -> getfield . id id                           (rule 21)

	id             shift, and enter state 76


State 57

	Instr -> putfield . id id                           (rule 22)

	id             shift, and enter state 75


State 58

	Instr -> checkcast . id                             (rule 23)

	id             shift, and enter state 74


State 59

	Instr -> invoke . id int                            (rule 24)

	id             shift, and enter state 73


State 60

	Instr -> return .                                   (rule 25)

	class          reduce using rule 25
	method         reduce using rule 25
	load           reduce using rule 25
	store          reduce using rule 25
	push           reduce using rule 25
	new            reduce using rule 25
	getfield       reduce using rule 25
	putfield       reduce using rule 25
	checkcast      reduce using rule 25
	invoke         reduce using rule 25
	return         reduce using rule 25
	pop            reduce using rule 25
	iadd           reduce using rule 25
	isub           reduce using rule 25
	goto           reduce using rule 25
	cmpeq          reduce using rule 25
	cmpgeq         reduce using rule 25
	not            reduce using rule 25
	and            reduce using rule 25
	or             reduce using rule 25
	iffalse        reduce using rule 25
	%eof           reduce using rule 25


State 61

	Instr -> pop .                                      (rule 26)

	class          reduce using rule 26
	method         reduce using rule 26
	load           reduce using rule 26
	store          reduce using rule 26
	push           reduce using rule 26
	new            reduce using rule 26
	getfield       reduce using rule 26
	putfield       reduce using rule 26
	checkcast      reduce using rule 26
	invoke         reduce using rule 26
	return         reduce using rule 26
	pop            reduce using rule 26
	iadd           reduce using rule 26
	isub           reduce using rule 26
	goto           reduce using rule 26
	cmpeq          reduce using rule 26
	cmpgeq         reduce using rule 26
	not            reduce using rule 26
	and            reduce using rule 26
	or             reduce using rule 26
	iffalse        reduce using rule 26
	%eof           reduce using rule 26


State 62

	Instr -> iadd .                                     (rule 27)

	class          reduce using rule 27
	method         reduce using rule 27
	load           reduce using rule 27
	store          reduce using rule 27
	push           reduce using rule 27
	new            reduce using rule 27
	getfield       reduce using rule 27
	putfield       reduce using rule 27
	checkcast      reduce using rule 27
	invoke         reduce using rule 27
	return         reduce using rule 27
	pop            reduce using rule 27
	iadd           reduce using rule 27
	isub           reduce using rule 27
	goto           reduce using rule 27
	cmpeq          reduce using rule 27
	cmpgeq         reduce using rule 27
	not            reduce using rule 27
	and            reduce using rule 27
	or             reduce using rule 27
	iffalse        reduce using rule 27
	%eof           reduce using rule 27


State 63

	Instr -> isub .                                     (rule 28)

	class          reduce using rule 28
	method         reduce using rule 28
	load           reduce using rule 28
	store          reduce using rule 28
	push           reduce using rule 28
	new            reduce using rule 28
	getfield       reduce using rule 28
	putfield       reduce using rule 28
	checkcast      reduce using rule 28
	invoke         reduce using rule 28
	return         reduce using rule 28
	pop            reduce using rule 28
	iadd           reduce using rule 28
	isub           reduce using rule 28
	goto           reduce using rule 28
	cmpeq          reduce using rule 28
	cmpgeq         reduce using rule 28
	not            reduce using rule 28
	and            reduce using rule 28
	or             reduce using rule 28
	iffalse        reduce using rule 28
	%eof           reduce using rule 28


State 64

	Instr -> goto . int                                 (rule 29)

	int            shift, and enter state 72


State 65

	Instr -> cmpeq .                                    (rule 30)

	class          reduce using rule 30
	method         reduce using rule 30
	load           reduce using rule 30
	store          reduce using rule 30
	push           reduce using rule 30
	new            reduce using rule 30
	getfield       reduce using rule 30
	putfield       reduce using rule 30
	checkcast      reduce using rule 30
	invoke         reduce using rule 30
	return         reduce using rule 30
	pop            reduce using rule 30
	iadd           reduce using rule 30
	isub           reduce using rule 30
	goto           reduce using rule 30
	cmpeq          reduce using rule 30
	cmpgeq         reduce using rule 30
	not            reduce using rule 30
	and            reduce using rule 30
	or             reduce using rule 30
	iffalse        reduce using rule 30
	%eof           reduce using rule 30


State 66

	Instr -> cmpgeq .                                   (rule 31)

	class          reduce using rule 31
	method         reduce using rule 31
	load           reduce using rule 31
	store          reduce using rule 31
	push           reduce using rule 31
	new            reduce using rule 31
	getfield       reduce using rule 31
	putfield       reduce using rule 31
	checkcast      reduce using rule 31
	invoke         reduce using rule 31
	return         reduce using rule 31
	pop            reduce using rule 31
	iadd           reduce using rule 31
	isub           reduce using rule 31
	goto           reduce using rule 31
	cmpeq          reduce using rule 31
	cmpgeq         reduce using rule 31
	not            reduce using rule 31
	and            reduce using rule 31
	or             reduce using rule 31
	iffalse        reduce using rule 31
	%eof           reduce using rule 31


State 67

	Instr -> not .                                      (rule 32)

	class          reduce using rule 32
	method         reduce using rule 32
	load           reduce using rule 32
	store          reduce using rule 32
	push           reduce using rule 32
	new            reduce using rule 32
	getfield       reduce using rule 32
	putfield       reduce using rule 32
	checkcast      reduce using rule 32
	invoke         reduce using rule 32
	return         reduce using rule 32
	pop            reduce using rule 32
	iadd           reduce using rule 32
	isub           reduce using rule 32
	goto           reduce using rule 32
	cmpeq          reduce using rule 32
	cmpgeq         reduce using rule 32
	not            reduce using rule 32
	and            reduce using rule 32
	or             reduce using rule 32
	iffalse        reduce using rule 32
	%eof           reduce using rule 32


State 68

	Instr -> and .                                      (rule 33)

	class          reduce using rule 33
	method         reduce using rule 33
	load           reduce using rule 33
	store          reduce using rule 33
	push           reduce using rule 33
	new            reduce using rule 33
	getfield       reduce using rule 33
	putfield       reduce using rule 33
	checkcast      reduce using rule 33
	invoke         reduce using rule 33
	return         reduce using rule 33
	pop            reduce using rule 33
	iadd           reduce using rule 33
	isub           reduce using rule 33
	goto           reduce using rule 33
	cmpeq          reduce using rule 33
	cmpgeq         reduce using rule 33
	not            reduce using rule 33
	and            reduce using rule 33
	or             reduce using rule 33
	iffalse        reduce using rule 33
	%eof           reduce using rule 33


State 69

	Instr -> or .                                       (rule 34)

	class          reduce using rule 34
	method         reduce using rule 34
	load           reduce using rule 34
	store          reduce using rule 34
	push           reduce using rule 34
	new            reduce using rule 34
	getfield       reduce using rule 34
	putfield       reduce using rule 34
	checkcast      reduce using rule 34
	invoke         reduce using rule 34
	return         reduce using rule 34
	pop            reduce using rule 34
	iadd           reduce using rule 34
	isub           reduce using rule 34
	goto           reduce using rule 34
	cmpeq          reduce using rule 34
	cmpgeq         reduce using rule 34
	not            reduce using rule 34
	and            reduce using rule 34
	or             reduce using rule 34
	iffalse        reduce using rule 34
	%eof           reduce using rule 34


State 70

	Instr -> iffalse . int                              (rule 35)

	int            shift, and enter state 71


State 71

	Instr -> iffalse int .                              (rule 35)

	class          reduce using rule 35
	method         reduce using rule 35
	load           reduce using rule 35
	store          reduce using rule 35
	push           reduce using rule 35
	new            reduce using rule 35
	getfield       reduce using rule 35
	putfield       reduce using rule 35
	checkcast      reduce using rule 35
	invoke         reduce using rule 35
	return         reduce using rule 35
	pop            reduce using rule 35
	iadd           reduce using rule 35
	isub           reduce using rule 35
	goto           reduce using rule 35
	cmpeq          reduce using rule 35
	cmpgeq         reduce using rule 35
	not            reduce using rule 35
	and            reduce using rule 35
	or             reduce using rule 35
	iffalse        reduce using rule 35
	%eof           reduce using rule 35


State 72

	Instr -> goto int .                                 (rule 29)

	class          reduce using rule 29
	method         reduce using rule 29
	load           reduce using rule 29
	store          reduce using rule 29
	push           reduce using rule 29
	new            reduce using rule 29
	getfield       reduce using rule 29
	putfield       reduce using rule 29
	checkcast      reduce using rule 29
	invoke         reduce using rule 29
	return         reduce using rule 29
	pop            reduce using rule 29
	iadd           reduce using rule 29
	isub           reduce using rule 29
	goto           reduce using rule 29
	cmpeq          reduce using rule 29
	cmpgeq         reduce using rule 29
	not            reduce using rule 29
	and            reduce using rule 29
	or             reduce using rule 29
	iffalse        reduce using rule 29
	%eof           reduce using rule 29


State 73

	Instr -> invoke id . int                            (rule 24)

	int            shift, and enter state 84


State 74

	Instr -> checkcast id .                             (rule 23)

	class          reduce using rule 23
	method         reduce using rule 23
	load           reduce using rule 23
	store          reduce using rule 23
	push           reduce using rule 23
	new            reduce using rule 23
	getfield       reduce using rule 23
	putfield       reduce using rule 23
	checkcast      reduce using rule 23
	invoke         reduce using rule 23
	return         reduce using rule 23
	pop            reduce using rule 23
	iadd           reduce using rule 23
	isub           reduce using rule 23
	goto           reduce using rule 23
	cmpeq          reduce using rule 23
	cmpgeq         reduce using rule 23
	not            reduce using rule 23
	and            reduce using rule 23
	or             reduce using rule 23
	iffalse        reduce using rule 23
	%eof           reduce using rule 23


State 75

	Instr -> putfield id . id                           (rule 22)

	id             shift, and enter state 83


State 76

	Instr -> getfield id . id                           (rule 21)

	id             shift, and enter state 82


State 77

	Instr -> new id .                                   (rule 20)

	class          reduce using rule 20
	method         reduce using rule 20
	load           reduce using rule 20
	store          reduce using rule 20
	push           reduce using rule 20
	new            reduce using rule 20
	getfield       reduce using rule 20
	putfield       reduce using rule 20
	checkcast      reduce using rule 20
	invoke         reduce using rule 20
	return         reduce using rule 20
	pop            reduce using rule 20
	iadd           reduce using rule 20
	isub           reduce using rule 20
	goto           reduce using rule 20
	cmpeq          reduce using rule 20
	cmpgeq         reduce using rule 20
	not            reduce using rule 20
	and            reduce using rule 20
	or             reduce using rule 20
	iffalse        reduce using rule 20
	%eof           reduce using rule 20


State 78

	Instr -> push absval .                              (rule 19)

	class          reduce using rule 19
	method         reduce using rule 19
	load           reduce using rule 19
	store          reduce using rule 19
	push           reduce using rule 19
	new            reduce using rule 19
	getfield       reduce using rule 19
	putfield       reduce using rule 19
	checkcast      reduce using rule 19
	invoke         reduce using rule 19
	return         reduce using rule 19
	pop            reduce using rule 19
	iadd           reduce using rule 19
	isub           reduce using rule 19
	goto           reduce using rule 19
	cmpeq          reduce using rule 19
	cmpgeq         reduce using rule 19
	not            reduce using rule 19
	and            reduce using rule 19
	or             reduce using rule 19
	iffalse        reduce using rule 19
	%eof           reduce using rule 19


State 79

	Instr -> store int .                                (rule 18)

	class          reduce using rule 18
	method         reduce using rule 18
	load           reduce using rule 18
	store          reduce using rule 18
	push           reduce using rule 18
	new            reduce using rule 18
	getfield       reduce using rule 18
	putfield       reduce using rule 18
	checkcast      reduce using rule 18
	invoke         reduce using rule 18
	return         reduce using rule 18
	pop            reduce using rule 18
	iadd           reduce using rule 18
	isub           reduce using rule 18
	goto           reduce using rule 18
	cmpeq          reduce using rule 18
	cmpgeq         reduce using rule 18
	not            reduce using rule 18
	and            reduce using rule 18
	or             reduce using rule 18
	iffalse        reduce using rule 18
	%eof           reduce using rule 18


State 80

	Instr -> load int .                                 (rule 17)

	class          reduce using rule 17
	method         reduce using rule 17
	load           reduce using rule 17
	store          reduce using rule 17
	push           reduce using rule 17
	new            reduce using rule 17
	getfield       reduce using rule 17
	putfield       reduce using rule 17
	checkcast      reduce using rule 17
	invoke         reduce using rule 17
	return         reduce using rule 17
	pop            reduce using rule 17
	iadd           reduce using rule 17
	isub           reduce using rule 17
	goto           reduce using rule 17
	cmpeq          reduce using rule 17
	cmpgeq         reduce using rule 17
	not            reduce using rule 17
	and            reduce using rule 17
	or             reduce using rule 17
	iffalse        reduce using rule 17
	%eof           reduce using rule 17


State 81

	ByteCode -> Instr ByteCode .                        (rule 15)

	class          reduce using rule 15
	method         reduce using rule 15
	%eof           reduce using rule 15


State 82

	Instr -> getfield id id .                           (rule 21)

	class          reduce using rule 21
	method         reduce using rule 21
	load           reduce using rule 21
	store          reduce using rule 21
	push           reduce using rule 21
	new            reduce using rule 21
	getfield       reduce using rule 21
	putfield       reduce using rule 21
	checkcast      reduce using rule 21
	invoke         reduce using rule 21
	return         reduce using rule 21
	pop            reduce using rule 21
	iadd           reduce using rule 21
	isub           reduce using rule 21
	goto           reduce using rule 21
	cmpeq          reduce using rule 21
	cmpgeq         reduce using rule 21
	not            reduce using rule 21
	and            reduce using rule 21
	or             reduce using rule 21
	iffalse        reduce using rule 21
	%eof           reduce using rule 21


State 83

	Instr -> putfield id id .                           (rule 22)

	class          reduce using rule 22
	method         reduce using rule 22
	load           reduce using rule 22
	store          reduce using rule 22
	push           reduce using rule 22
	new            reduce using rule 22
	getfield       reduce using rule 22
	putfield       reduce using rule 22
	checkcast      reduce using rule 22
	invoke         reduce using rule 22
	return         reduce using rule 22
	pop            reduce using rule 22
	iadd           reduce using rule 22
	isub           reduce using rule 22
	goto           reduce using rule 22
	cmpeq          reduce using rule 22
	cmpgeq         reduce using rule 22
	not            reduce using rule 22
	and            reduce using rule 22
	or             reduce using rule 22
	iffalse        reduce using rule 22
	%eof           reduce using rule 22


State 84
